# SunnieClassroomAdventures

./: .devenv.flake.nix  .gitignore  AGENTS.md  README.md  crop_sunnie.py  export_onnx.py  extract_poses.py  game.html  get_mnist_model.py  index.html  prompt.md  pyproject.toml  train_model.py
.devenv/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-1-link
.github/workflows/: pages.yml
adhoc_scripts/: analyze_color.py  blend_fixed_seam.py  blend_img3_seam.py  combine_bg.py  composite_bus.py  composite_bus_v2.py  composite_nice_sunnie.py  create_bus_sheet.py  create_seam_ref.py  make_favicon.py  process_minibus.py  process_sprite.py  recolor_bus.py  recolor_bus_white.py  remove_bg.py  tile_user_minibus.py
css/: style.css
js/: game.js
js/drawing/: DrawingCanvas.js
js/entities/: Balloon.js  StarCluster.js
js/recognition/: digitCNN.js  greekCNN.js  pdollar.js  templates.js
js/scenes/: BootScene.js  GameOverScene.js  GameScene.js  TitleScene.js
js/systems/: LifeSystem.js  Spawner.js
model/: class_names.json  digit_cnn.onnx  digit_cnn.pt  greek_cnn.onnx  greek_cnn.pth
